k3s-public-sanitized/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sn-api-server
  namespace: sn-api
  labels:
    app: sn-api-server
spec:
  type: ClusterIP
  selector:
    app: sn-api-server
  ports:
    - port: 80
      targetPort: 8080
